--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
 <section class="contact" id="contact">
   <div class="container contact-box d-flex align-items-center">
     <div class="contact-img-wrapper" (click)="openHumanModal()">
-      <img src="assets/images/yo.avif" alt="Contacto" class="contact-img rounded-circle">
+      <img src="assets/images/yo.png" alt="Contacto" class="contact-img rounded-circle">
     </div>
 
     <div class="contact-text ms-4">
